--- a/recipe/templates/recipe/recipe_list.html
+++ b/recipe/templates/recipe/recipe_list.html
@@ -7,5 +7,8 @@
 </head>
 <body>
     <h1>Recipe List</h1>
+    <a href="add_recipe/">
+        <button>Click me</button>
+      </a>
 </body>
 </html>
