Add code to recipe list to display recipe entries

--- a/recipe/templates/recipe/recipe_list.html
+++ b/recipe/templates/recipe/recipe_list.html
@@ -1,14 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Recipes</title>
-</head>
-<body>
-    <h1>Recipe List</h1>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Views Part 1</title>
+  </head>
+
+  <body>
+    <body>
+      <h1>Recipes list</h1>
+      {% for recipe in object_list %}
+      <h2>{{recipe.title}}</h2>
+      <p>Author: {{recipe.author}}</p>
+      {% endfor %}
+    </body>
+    <p>Add a recipe here:</p>
     <a href="add_recipe/">
-        <button>Click me</button>
-      </a>
-</body>
+      <button>Click me</button>
+    </a>
+  </body>
 </html>
