Add login logic

--- a/member/templates/member/login.html
+++ b/member/templates/member/login.html
@@ -1,3 +1,5 @@
+{% extends "base.html" %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,11 +9,14 @@
 </head>
 <body>
     <h1>Member Login</h1>
+    {% block message %}
     <p>Log in here to share recipes on our site.</p>
     <form action="/member/login/" method="post">
         {% csrf_token %}
         {{ form }}
-        <button>Submit</button>
+        <button>Login</button>
     </form>
+    <!-- <p>Don't have an account? <a href="{% url 'member:register' %}">Sign up</a></p> -->
+    {% endblock %}
 </body>
 </html>
