--- a/recipe/templates/recipe/member_home.html
+++ b/recipe/templates/recipe/member_home.html
@@ -1,8 +1,8 @@
 {% extends "base.html" %} 
 {% block message %} 
-this is index.html, here we will
-welcome visitors and ask them if they would like to register on our site in
-order to share recipes. If they are already a member they can log in. 
+HELLO MEMBER!
+this is member_home, here we will
+welcome our members back and invite them to share recipes with the community
 {% endblock message %} 
 {% block content %}
 <!-- index.html content starts here -->
