--- a/templates/base.html
+++ b/templates/base.html
@@ -30,48 +30,62 @@
 
     <title>The Recipe Hub</title>
   </head>
-  <body class="d-flex flex-column min-vh-100">
-    <!--  Navigation -->
-    <nav class="navbar bg-body-tertiary">
-      <div class="container-fluid">
-        <a class="navbar-brand">Navbar</a>
-        <form class="d-flex" role="search">
-          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success" type="submit">Search</button>
-        </form>
-    </div>
-    <ul class="nav">
-      <li class="nav-item">
-        <a class="nav-link" href="#">Home</a>
-      </li><li class="nav-item">
-        <a class="nav-link" href="#">About</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="member/login/">Login</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/member/register/">Register</a>
-      </li>
-    </ul>
-    </nav>
-
-  <!-- <main class="flex-shrink-0 main-bg"> -->
-    <main class="flex-grow-1 container py-4">
-      {% block content %}
-      <p>This is my default content.</p>
-      {% endblock content %}
-    </main>
-
-    <!-- Footer -->
-      <!-- <footer class="footer mt-auto py-3 dark-bg"> -->
-      <footer class="text-white text-center py-3 mt-auto"></footer>
-      <p class="m-0 text-center text-white">Made by Code Instituters</p>
-      <p class="m-0 text-center text-white">
-        Follow us: <i class="fab fa-facebook-square ms-3">FB</i>
-        <i class="fab fa-twitter-square ms-3">X</i>
-        <i class="fab fa-instagram-square ms-3">I</i>
-        <i class="fab fa-youtube-square ms-3">YT</i>
-      </p>
-    </footer>
-  </body>
+  
+    <div class = "container">
+      <body class="d-flex flex-column min-vh-100">
+        <!--  Navigation -->
+        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+          <div class="container-fluid">
+            <a class="navbar-brand" href="#">Navbar</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+              <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="#">Home</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">About</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="member/register">Register</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="member/login">Login</a>
+                </li>
+              </ul>
+              <form class="d-flex" role="search">
+                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                <button class="btn btn-outline-success" type="submit">Search</button>
+              </form>
+            </div>
+          </div>
+        </nav>
+    
+    
+          <main class="container py-4">
+            {% block message %}
+            <p>This is my default content.</p>
+            {% endblock message %}
+          </main>
+    
+    
+        <main class="flex-grow-1 container py-4">
+          {% block content %}
+          <p>This is my default content.</p>
+          {% endblock content %}
+        </main>
+      </div>
+        <!-- Footer -->
+          <footer class="mt-auto text-white text-center py-3">
+          <p class="m-0 text-center text-white">Made by Code Instituters</p>
+          <p class="m-0 text-center text-white">
+            Follow us: <i class="fab fa-facebook-square ms-3">FB</i>
+            <i class="fab fa-twitter-square ms-3">X</i>
+            <i class="fab fa-instagram-square ms-3">I</i>
+            <i class="fab fa-youtube-square ms-3">YT</i>
+          </p>
+        </footer>
+      </body>
 </html>
