--- a/recipe/templates/recipe/index.html
+++ b/recipe/templates/recipe/index.html
@@ -1,8 +1,6 @@
 {% extends "base.html" %} 
 {% block message %} 
-this is index.html, here we will
-welcome visitors and ask them if they would like to register on our site in
-order to share recipes. If they are already a member they can log in. 
+<p> This is for visitors to see our recipe list.</p>
 {% endblock message %} 
 {% block content %}
 <!-- index.html content starts here -->
