--- a/recipe/templates/recipe/member_home.html
+++ b/recipe/templates/recipe/member_home.html
@@ -1,8 +1,6 @@
 {% extends "base.html" %} 
 {% block message %} 
-HELLO MEMBER!
-this is member_home, here we will
-welcome our members back and invite them to share recipes with the community
+<p>MEMBER HOME</p>
 {% endblock message %} 
 {% block content %}
 <!-- index.html content starts here -->
