--- a/member/templates/member/register.html
+++ b/member/templates/member/register.html
@@ -1,3 +1,4 @@
+{% extends "base.html" %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,11 +8,13 @@
 </head>
 <body>
     <h1>Hello World!</h1>
+    {% block message %}
     <p>Register here to share recipes on our site.</p>
     <form action="/member/register/" method="post">
         {% csrf_token %}
         {{ form }}
         <button>Submit</button>
     </form>
+    {% endblock %}
 </body>
 </html>
