--- a/templates/base.html
+++ b/templates/base.html
@@ -43,17 +43,28 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="#">Home</a>
+                  <a class="nav-link active" aria-current="page" href="{% url 'recipe:list' %}">Home</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="#">About</a>
                 </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="member/register">Register</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="member/login">Login</a>
-                </li>
+                {% if user.is_authenticated %}
+                  <!-- If user is logged in, show Logout -->
+                  <li class="nav-item">
+                    <form action="{% url 'member:member_logout' %}" method="post" class="d-inline">
+                        {% csrf_token %}
+                        <button type="submit" class="btn btn-link">Logout</button>
+                    </form>
+                  </li>
+                {% else %}
+                  <!-- If user is NOT logged in, show Login -->
+                  <li class="nav-item">
+                    <a class="nav-link" href="{% url 'member:member_login' %}">Login/Register</a>
+                  </li>
+                  <!-- <li class="nav-item">
+                    <a class="nav-link" href="member/register">Register</a>
+                  </li> -->
+                {% endif %}
               </ul>
               <form class="d-flex" role="search">
                 <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
@@ -65,6 +76,11 @@
     
     
           <main class="container py-4">
+          {% if user.is_authenticated %}
+            <h2 class="">Welcome, {{ user.username }}!</h2> 
+          {% else %}
+            <h2 class="">Welcome to the recipe hub.</h2>
+          {% endif %}
             {% block message %}
             <p>This is my default content.</p>
             {% endblock message %}
