--- a/recipe/templates/recipe/add_recipe.html
+++ b/recipe/templates/recipe/add_recipe.html
@@ -1,3 +1,7 @@
+{% extends "base.html" %}
+
+
+{% block content %}
 <!-- {% load static %} -->
 <!DOCTYPE html>
 <html>
@@ -13,13 +17,8 @@
         <h3>Recipe Details</h3>
         {{ form.as_p }}
 
-        <h3>Ingredients</h3>
-        {{ formset.management_form }}  <!-- Required for formsets -->
-        {% for form in formset %}
-            {{ form.as_p }}
-        {% endfor %}
-
         <button type="submit">Save Recipe</button>
     </form>
 </body>
 </html>
+{% endblock %}
