--- a/recipe/templates/recipe/add_recipe.html
+++ b/recipe/templates/recipe/add_recipe.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
-
+{% load static %}
+{% load crispy_forms_tags %}
 
 {% block content %}
 <!-- {% load static %} -->
@@ -7,13 +8,11 @@
 <html>
 <head>
     <title>Add Recipe</title>
-    <!-- {{ form.media }}  Required if using widgets like Summernote -->
 </head>
 <body>
     <h2>Add a New Recipe</h2>
     <form method="POST">
         {% csrf_token %}
-        
         <h3>Recipe Details</h3>
         {{ form.as_p }}
 
