Add search recipe by ingredient view and url

--- a/member/templates/member/login.html
+++ b/member/templates/member/login.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1>Member Login</h1>
-    {% block message %}
+    {% block content %}
     <p>Log in here to share recipes on our site.</p>
     <form action="/member/login/" method="post">
         {% csrf_token %}
