--- a/recipe/templates/recipe/delete_recipe.html
+++ b/recipe/templates/recipe/delete_recipe.html
@@ -1,11 +1,9 @@
-{% extends "base.html" %}
-
-{% block content %}
+{% extends "base.html" %} {% block content %}
 <h2>Are you sure you want to delete "{{ recipe.title }}"?</h2>
 
 <form method="POST">
-    {% csrf_token %}
-    <button type="submit">Yes, Delete</button>
+  {% csrf_token %}
+  <button type="submit">Yes, Delete</button>
 </form>
 
 <a href="{% url 'recipe:recipe_detail' recipe.slug %}">Cancel</a>
