--- a/templates/base.html
+++ b/templates/base.html
@@ -1,4 +1,5 @@
-{% load static %} {% url 'home' as home_url %}
+{% load static %} {% url 'home' as home_url %}{% url 'about' as about_url %}
+
 
 <!DOCTYPE html>
 <html lang="en">
@@ -43,18 +44,36 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="{% url 'recipe:list' %}">Home</a>
+                  <a class="nav-link {% if request.path == about_url %}active{%endif%}" aria-current="page" href="{% url 'recipe:list' %}">Home</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">About</a>
+                  <a
+                    class="nav-link
+                    {% if request.path == about_url %}active{%endif%}"
+                    aria-current="page"
+                    href="{% url 'about' %}"
+                    >About</a
+                  >
                 </li>
                 {% if user.is_authenticated %}
-                  <!-- If user is logged in, show Logout -->
+                  <!-- If user is logged in, display welcome message, member buttons and show Logout -->
                   <li class="nav-item">
                     <form action="{% url 'member:member_logout' %}" method="post" class="d-inline">
                         {% csrf_token %}
                         <button type="submit" class="btn btn-link">Logout</button>
                     </form>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="">Welcome {{ user.username }}!</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="">Add Recipe</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="">Manage My Recipes</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="">Admin Panel</a>
                   </li>
                 {% else %}
                   <!-- If user is NOT logged in, show Login -->
@@ -66,44 +85,51 @@
                   </li> -->
                 {% endif %}
               </ul>
-              <form class="d-flex" role="search">
-                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+              <!-- <form class="d-flex" role="search">
+                              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                              <button class="btn btn-outline-success" type="submit">Search</button>
+                            </form> -->
+              
+              <form class="d-flex" role="search" method="GET" action="{% url 'recipe:recipe_search' %}">
+                <input class="form-control me-2" type="search" name="query" placeholder="Search" aria-label="Search">
                 <button class="btn btn-outline-success" type="submit">Search</button>
               </form>
-            </div>
-          </div>
-        </nav>
-    
-    
-          <main class="container py-4">
-            {% if user.is_authenticated %}
-              <!-- if recipe has just been submitted display confirmation message -->
-              {% if messages %}
-                <div class="messages">
-                  {% for message in messages %}
-                      <div class="alert alert-{{ message.tags }}">{{ message }}</div>
-                      <p class="welcome">Thanks {{ user.username }}! Keep them coming, we love your recipes! <a
-                        class="btn btn-primary btn-sm"" href=" /add_recipe/">Create a Recipe</a></p>
-                  {% endfor %}
-                </div>
-              {% else %}
-                <p class="welcome">Welcome, {{ user.username }}! Have a great recipe? Share it with us! <a
-                class="btn btn-primary btn-sm"" href=" /add_recipe/">Create a Recipe</a></p>
-                <p> Manage your recipes here <a
-                  class="btn btn-primary btn-sm"" href="/member_recipes/">Manage My Recipes</a></p>
-                {% endif %}
+              
+              </div>
+              </div>
+              </nav>
+        <main class="container py-4">
+          {% if user.is_authenticated %}
+            <!-- if recipe has just been submitted display confirmation message else welcome back member -->
+                    {% if messages %}
+                          <div class="messages">
+                            {% for message in messages %}
+                                <div class="alert alert-{{ message.tags }}">{{ message }}</div>
+                                <p class="welcome">Thanks {{ user.username }}! You can add or manage your recipes below: </p>
+                            {% endfor %}		
+                    {% else %}
+                            <p class="welcome">Welcome, {{ user.username }}! Have a great recipe? Share it with us!</p>
+                          {% endif %}
+              </div>
+            <!-- end if recipe has just been submitted display confirmation message -->
+            <!-- Display create recipe and manage recipes for members -->
+            {% if request.user.is_superuser %}
+              <a class="btn btn-primary btn-sm"" href=" /add_recipe/">Create a Recipe</a>
+              <a class="btn btn-primary btn-sm"" href=" /member_recipes/">Manage My Recipes</a>
+              <a class="btn btn-primary btn-sm"" href=" /admin/">Admin Panel</a>
+              </p>
             {% else %}
-              <p class="welcome">Welcome to the recipe hub.</p>
-            {% endif %}
-            {% block message %}
-            <p>This is my default content.</p>
-            {% endblock message %}
-          </main>
-    
-    
+              <p><a class="btn btn-primary btn-sm"" href=" /add_recipe/">Create a Recipe</a>
+              <a class="btn btn-primary btn-sm"" href=" /member_recipes/">Manage My Recipes</a></p>
+            {% endif %} <!-- else User is not authenticated therefore not a member display simple welcome message -->
+          {% else %}<!-- else User is not authenticated therefore not a member display simple welcome message -->
+            <p class="welcome">Welcome to the recipe hub.</p>
+          {% endif %}
+        </main>
+          
         <main class="flex-grow-1 container py-4">
           {% block content %}
-          <p>This is my default content.</p>
+          <p>This is my default base.html content.</p>
           {% endblock content %}
         </main>
       </div>
