--- a/templates/base.html
+++ b/templates/base.html
@@ -1,4 +1,4 @@
-{% load static %} {% url 'home' as home_url %}{% url 'about' as about_url %}
+{% load static %} {% url 'recipe:list' as list_url %}{% url 'about' as about_url %}
 
 
 <!DOCTYPE html>
@@ -32,50 +32,46 @@
     <title>The Recipe Hub</title>
   </head>
   
-    <div class = "container">
-      <body class="d-flex flex-column min-vh-100">
-        <!--  Navigation -->
-        <nav class="navbar navbar-expand-lg bg-body-tertiary">
-          <div class="container-fluid">
-            <a class="navbar-brand" href="{% url 'recipe:list' %}">the recipe hub</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-              <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item">
-                  <a class="nav-link {% if request.path == list.url %}active{%endif%}" aria-current="page" href="{% url 'recipe:list' %}">home</a>
-                </li>
-                <li class="nav-item">
-                  <a
-                    class="nav-link
-                    {% if request.path == about.url %}active{%endif%}"
-                    aria-current="page"
-                    href="{% url 'about' %}"
-                    >about</a>
-                </li>
-                {% if user.is_authenticated %}
-                  <!-- If user is logged in show Logout -->
-                  <li class="nav-item">
-                    <form action="{% url 'member:member_logout' %}" method="post" class="d-inline">
-                        {% csrf_token %}
-                        <button type="submit" class="btn btn-light btn-sm">logout</button>
-                    </form>
-                {% else %}
-                  <!-- If user is NOT logged in, show Login -->
-                  <li class="nav-item">
-                    <a class="nav-link" href="{% url 'member:member_login' %}">login/register</a>
-                  </li>
-                {% endif %}
-              </ul>
+  <div class="container">
+    <body class="d-flex flex-column min-vh-100">
+      <!--  Navigation -->
+      <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="{% url 'recipe:list' %}">the recipe hub</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <!-- Left-side navigation links -->
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link {% if request.path == list_url %}active{% endif %}" href="{{ list_url }}">home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link {% if request.path == about_url %}active{% endif %}" href="{{ about_url }}">about</a>
+              </li>
+            </ul>
+  
+            <!-- Right-side login/logout + search -->
+            <div class="d-flex align-items-center ms-auto">
+              {% if user.is_authenticated %}
+                <form action="{% url 'member:member_logout' %}" method="post" class="me-3">
+                  {% csrf_token %}
+                  <button type="submit" class="logout">logout</button>
+                </form>
+              {% else %}
+                <a class="link me-3" href="{% url 'member:member_login' %}">login/register</a>
+              {% endif %}
               <form class="d-flex" role="search" method="GET" action="{% url 'recipe:recipe_search' %}">
                 <input class="form-control me-2" type="search" name="query" placeholder="search" aria-label="Search">
                 <button class="btn btn-primary" type="submit">search</button>
-              </form>            
-              </div>
-              </div>
-              </nav>
-        <main class="custom-content container py-3">
+              </form>
+            </div>
+          </div>
+        </div>
+      </nav>
+
+        <section class="custom-content container py-3">
           {% if user.is_authenticated %}
             <!-- if recipe has just been submitted display confirmation message else welcome back member -->
                     {% if messages %}
@@ -103,7 +99,7 @@
           {% else %}<!-- else User is not authenticated therefore not a member display simple welcome message -->
             <p class="welcome">Welcome to the recipe hub.</p>
           {% endif %}
-        </main>
+        </section>
           
         <main class="flex-grow-1 container py-4">
           {% block content %}
@@ -111,6 +107,8 @@
           {% endblock content %}
         </main>
       </div>
+    </body>
+  </div>
         <!-- Footer -->
           <footer class="mt-auto text-white text-center py-3">
           <p class="m-0 text-center text-white">Made by Code Instituters | Follow us: <i class="fab fa-facebook-square ms-3">FB</i>
@@ -119,5 +117,5 @@
             <i class="fab fa-youtube-square ms-3">YT</i>
           </p>
         </footer>
-      </body>
+      
 </html>
